<resources>
    <string name="app_name">ToDoProject</string>
    <string name="textview">TextView</string>
    <string name="textViewDes">TextViewDes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_input">Title_Input</string>
    <string name="dec_input">Dec_Input</string>
    <string name="add_task">add_task</string>
    <string name="task_added">task_added</string>
    <string name="title_task">title_task</string>
    <string name="more_detailed">more_detailed</string>
    <string name="time">time</string>
    <string name="delete">delete</string>
    <string name="save_changes">save_changes</string>
    <string name="edit">edit</string>
    <string name="date">date</string>
    <string name="titletask">TitleTask</string>
    <string name="description">Description</string>
    <string name="titleTask">Title_Task</string>
    <string name="dateTask">Date:</string>
    <string name="timeTask">Time:</string>
    <string name="date_pic">Date</string>
</resources>