<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="viEwModel"
        type="com.example.recycleviewtes.model.ToDoviewModel" />
</data>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/show_task"
                android:layout_width="300dp"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="#D999D3"
                android:foreground="?selectableItemBackground"
                android:clickable="true"
                tools:ignore="MissingConstraints">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/titleTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_task"
                        android:padding="20dp"
                        />

                    <TextView
                        android:id="@+id/mo_det"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/more_detailed"
                        android:padding="20dp" />

                    <TextView
                        android:id="@+id/date_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        tools:ignore="TextViewEdits"
                        android:padding="20dp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/time"
                        android:padding="20dp"
                        tools:ignore="InvalidId" />

                    <ImageButton
                        android:id="@+id/delete_icon"
                        android:layout_width="29dp"
                        android:layout_height="45dp"
                        android:background="#D999D3"
                        android:contentDescription="@string/delete"
                        android:padding="20dp"
                        android:src="@drawable/ic_baseline_delete_24"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


</layout>