<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="vieWModel"
        type="com.example.recycleviewtes.model.ToDoviewModel" />
</data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentAdd">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_Changes"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="533dp"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="MissingConstraints,UselessParent">

                <EditText
                    android:id="@+id/textViewS"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/title_task"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={vieWModel.title}"
                    tools:text="TitleTask" />

                <EditText
                    android:id="@+id/textViewSA"
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/more_detailed"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:text="Description" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>



                <TextView
                    android:id="@+id/material_timepicker_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="serif"
                    android:hint="@string/time"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TimePicker
                    android:id="@+id/material_textinput_timepicker"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:clipToPadding="true"
                    tools:ignore="InvalidId" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="311dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="@dimen/cardview_default_radius"
                    android:text="@string/save_changes"
                    android:textColor="#000000"
                    android:backgroundTint="@color/purple_200"
                    tools:ignore="InvalidId,TextContrastCheck" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>